# justdown

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HELP.md  INSTALL.md  LICENSE  README.md  go.mod  go.sum  graph.db  graph.json  graph.mjs  graph.tsv  graph_test.go  install.jd  jd_test.go  justdown.md  justfile  links_test.go  lint_test.go  mcp.mjs  platform_test.go  render_test.go  search_test.go  store.go  store_test.go
.bombshell/jd/: graph.db
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: release.md
.github/workflows/: graph.yml  release.yml
.jd/: .gitignore  hook-posttool.py  hook-pretool.py  hook-search.sh  hook_lib.py  justfile
.kern/: data.mdb  digest.md  lock.mdb
.kern/journal/: history.db  today.jsonl
cli/: Cargo.toml  parity.sh
cli/editor/: app.js  index.html  style.css
cli/src/: build.rs  config.rs  eval.rs  explore.rs  jd.rs  lint.rs  main.rs  mcp.rs  pull.rs  query.rs  render.rs  store.rs
cli/tests/: sigpipe.rs
cmd/jd/: build.go  config.go  explore.go  integration_test.go  lint.go  main.go  mcp.go  query.go
core/: Cargo.toml
core/src/: graph.rs  jd.rs  lib.rs  links.rs  lint.rs  platform.rs  search.rs  store.rs
cycle/: cycle_test.go
designs/art-deco/: README.md  index.html
designs/aurora-gradient/: README.md  index.html
designs/bento-grid/: README.md  index.html
designs/claymorphism/: index.html
designs/constructivism/: README.md  index.html
designs/glassmorphism/: index.html
designs/material-design/: index.html
designs/memphis/: README.md
designs/neo-brutalism/: README.md  index.html
designs/neumorphism/: README.md  index.html
designs/retro-pixel/: index.html
designs/skeuomorphism/: README.md
designs/swiss-international/: index.html
designs/tui-terminal/: README.md
designs/vaporwave-synthwave/: index.html
designs/y2k-frutiger-aero/: README.md  index.html
docs/: install.jd  justdown.md  nested-composition.md
eval/: queries.tsv
examples/: README.md
examples/knowledge/: orders.jd  product.jd
examples/onshape/: .gitignore  README.md  onshape_edit.py  package-lock.json  package.json  playwright.config.ts  verify_endpoints.py
examples/scaffolds/: pagination.jd  result.jd
examples/tools/: commit.jd  fmt.jd  new-tool.jd  screenshot.jd
examples/workflows/: onboard.jd
hooks/: hooks.json
scripts/: ensure-jd.sh  install.ps1  install.sh
src/: cycle.rs  graph.go  graph.rs  jd.go  lib.rs  lines.go  links.go  links.rs  lint.go  main.rs  platform.go  render.go  search.go  search.rs  store.rs
src/bouncer/: agent.odin  auth.odin  error.odin  ids.odin  plan.odin  registry.odin  route.odin
src/cmd/: build.rs  config.rs  explore.rs  lint.rs  mcp.rs  mod.rs  pull.rs  query.rs  refresh.rs  run.rs
src/cycle/: cycle.go
src/editor/: fsutil.go  tui.go  tui_buffer.go  tui_draw.go  tui_find.go  tui_finder.go  tui_keys.go  tui_lib.go  tui_link.go  tui_md.go  tui_md_test.go  tui_rg.go  tui_table.go  tui_test.go  tui_view.go
tests/: nested.rs  sigpipe.rs
(+37 files in other folders)
