[package]
name = "jd"
version = "0.3.0"
edition = "2021"
description = "justdown CLI — build, query, and merge the .jd library graph"
license = "MIT"

[[bin]]
name = "jd"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
justdown = { path = "../core" }

# unix-only: reset SIGPIPE to SIG_DFL so `jd … | head` exits cleanly instead of
# panicking with "failed printing to stdout: Broken pipe". Rust sets SIGPIPE to
# SIG_IGN by default; `jd` is a pipeable data source (`--json | jq`), so a closed
# downstream pipe must not crash it.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
